--- a/installer/packages/com.cryptominer.app/meta/package.xml
+++ b/installer/packages/com.cryptominer.app/meta/package.xml
@@ -3,7 +3,7 @@
     <DisplayName>CryptoMiner</DisplayName>
     <Description>CryptoMiner Application</Description>
     <Version>$teamcity-version</Version>
-    <ReleaseDate>$teamcity-releasedate</ReleaseDate>
+    <ReleaseDate>$teamcity-release-date</ReleaseDate>
     <Default>true</Default>
 	<ForcedInstallation>true</ForcedInstallation>
     <Script>installscript.js</Script>
