--- a/NiceHashMiner/NiceHashMinerLegacy.csproj
+++ b/NiceHashMiner/NiceHashMinerLegacy.csproj
@@ -110,6 +110,12 @@
     <Compile Include="Forms\Form_Authorization.Designer.cs">
       <DependentUpon>Form_Authorization.cs</DependentUpon>
     </Compile>
+    <Compile Include="Forms\Form_DriverUpdater.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\Form_DriverUpdater.Designer.cs">
+      <DependentUpon>Form_DriverUpdater.cs</DependentUpon>
+    </Compile>
     <Compile Include="IFTTT.cs" />
     <Compile Include="ExchangeRateAPI.cs" />
     <Compile Include="Miners\ClaymoreDual.cs" />
@@ -346,6 +352,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Form_3rdParty_TOS.resx">
       <DependentUpon>Form_3rdParty_TOS.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Forms\Form_DriverUpdater.resx">
+      <DependentUpon>Form_DriverUpdater.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Forms\Form_Settings.resx">
       <DependentUpon>Form_Settings.cs</DependentUpon>
