--- a/installer/launcher/launcher.dproj
+++ b/installer/launcher/launcher.dproj
@@ -71,9 +71,9 @@
         <DCC_RemoteDebug>true</DCC_RemoteDebug>
     </PropertyGroup>
     <PropertyGroup Condition="'$(Cfg_1_Win32)'!=''">
+        <Icon_MainIcon>..\..\NiceHashMiner\Resources\logo.ico</Icon_MainIcon>
         <VerInfo_Locale>1033</VerInfo_Locale>
         <DCC_ExeOutput>..\packages\com.cryptominer.app\data\</DCC_ExeOutput>
-        <Debugger_RunParams>-hide_tray_icon -hide_email</Debugger_RunParams>
         <VerInfo_IncludeVerInfo>true</VerInfo_IncludeVerInfo>
         <DCC_RemoteDebug>false</DCC_RemoteDebug>
     </PropertyGroup>
